<resources>
    <string name="app_name">AppPeluqueriaAdmin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Settings -->
    <string name="available_days">Días disponibles</string>
    <string name="letter_monday">L</string>
    <string name="letter_tuesday">M</string>
    <string name="letter_wednesday">X</string>
    <string name="letter_thursday">J</string>
    <string name="letter_friday">V</string>
    <string name="letter_saturday">S</string>
    <string name="letter_sunday">D</string>
    <string name="opening_time">Hora de apertura</string>
    <string name="schedule">Horario</string>
    <string name="closing_time">Hora de cierre</string>
    <string name="num_workers">Número de peluqueros</string>
    <string name="number">Número</string>
    <string name="set_services">Ajustar servicios</string>
    <string name="services">Servicios ofrecidos</string>
    <string name="settings_save_error">Error al guardar la configuración</string>
    <string name="settings_save_success">Configuración guardada</string>
    <string name="settings_missing_fields">Todos los campos son obligatorios</string>
    <string name="users">Usuarios</string>
    <string name="choose_date">Elige una fecha</string>
    <string name="invalid_date">Las fechas seleccionadas no son válidas</string>


    <!-- Appointment -->
    <string name="appointments">Citas</string>
    <string name="appointment_datetime">Fecha y hora</string>
    <string name="appointment_duration">Duración</string>
    <string name="appointment_services">Servicios</string>
    <string name="appointment_user">Usuario</string>

    <!-- Services -->
    <string name="service_name">Nombre</string>
    <string name="service_time">Duración (min)</string>
    <string name="toast_confirm_service_success">Servicio creado correctamente</string>
    <string name="toast_confirm_service_failed">Error al crear el servicio</string>
    <string name="toast_missing_name">El servicio debe tener un nombre</string>
    <string name="email">Email</string>
    <string name="phone">Teléfono</string>


</resources>