<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvAvailableDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_days"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llAvailableDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAvailableDays">

            <CheckBox
                android:id="@+id/checkboxMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkboxTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/checkboxMonday"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkboxWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/checkboxTuesday"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkboxThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/checkboxWednesday"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkboxFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/checkboxThursday"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkboxSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/checkboxFriday"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkboxSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/checkboxSaturday"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAvailableDaysLabels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/llAvailableDays"
            app:layout_constraintStart_toStartOf="@id/llAvailableDays"
            app:layout_constraintTop_toBottomOf="@id/llAvailableDays">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_monday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_tuesday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_wednesday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_thursday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_friday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_saturday"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/letter_sunday"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/schedule"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llAvailableDaysLabels" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvOpeningTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/opening_time"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvSchedule" />

        <EditText
            android:id="@+id/etOpeningTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="@id/tvOpeningTime"
            app:layout_constraintEnd_toStartOf="@id/btnOpeningTime"
            app:layout_constraintStart_toStartOf="@id/guidelineCenter"
            app:layout_constraintTop_toTopOf="@id/tvOpeningTime" />

        <ImageButton
            android:id="@+id/btnOpeningTime"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/accent"
            android:src="@drawable/ic_watch"
            app:layout_constraintBottom_toBottomOf="@id/tvOpeningTime"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@id/tvOpeningTime" />

        <TextView
            android:id="@+id/tvClosingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/closing_time"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tvOpeningTime"
            app:layout_goneMarginTop="16sp" />

        <EditText
            android:id="@+id/etClosingTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:focusable="false"
            app:layout_constraintBottom_toBottomOf="@id/tvClosingTime"
            app:layout_constraintEnd_toStartOf="@id/btnClosingTime"
            app:layout_constraintStart_toStartOf="@id/guidelineCenter"
            app:layout_constraintTop_toTopOf="@id/tvClosingTime" />

        <ImageButton
            android:id="@+id/btnClosingTime"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/accent"
            android:src="@drawable/ic_watch"
            app:layout_constraintBottom_toBottomOf="@id/tvClosingTime"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintTop_toTopOf="@id/tvClosingTime" />

        <TextView
            android:id="@+id/tvNumWorkers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/num_workers"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvClosingTime" />

        <TextView
            android:id="@+id/tvNumWorkersValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/npNumWorkers"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@+id/npNumWorkers" />

        <NumberPicker
            android:id="@+id/npNumWorkers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@id/tvNumWorkers" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabConfirmSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:backgroundTint="@color/accent"
        android:src="@drawable/ic_confirm"
        app:tint="@color/black" />

</FrameLayout>